<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.appmakings.james.jobrecord.MainActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:id="@+id/editText6"
        android:hint="@string/enter_job_address"
        android:textSize="14sp"
        android:layout_below="@+id/textView9"
        android:layout_alignStart="@+id/editText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText5"
        android:hint="@string/client_mobile"
        android:textSize="14sp"
        android:inputType="phone"
        android:layout_below="@+id/editText4"
        android:layout_alignStart="@+id/editText4" />

    <TextView
        android:text="@string/select_job_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/client_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/spinner"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/editText"
        android:hint="@string/enter_client_name"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:textSize="14sp" />

    <TextView
        android:text="@string/client_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/client_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/editText6"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/editText2"
        android:hint="@string/client_email"
        android:textSize="14sp"
        android:layout_below="@+id/textView10"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText4"
        android:hint="@string/client_phone"
        android:textSize="14sp"
        android:layout_below="@+id/editText2"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:entries="@array/type_arrays"
        android:prompt="@string/type_prompt"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText7"
        android:hint="@string/job_description"
        android:textSize="14sp"
        android:layout_below="@+id/editText5"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:hint="@string/quote_description"
        android:textSize="14sp"
        android:layout_below="@+id/editText7"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/items_to_install"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/editText3"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:entries="@array/Itemsarray"
        android:layout_below="@+id/textView12"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editText3" />

</RelativeLayout>

